* for clarity, code for plugins management in a separate module pluginsmgmt.py
* first draft for sched plugin Throttle 
* the config files, logrotate file and sysconfig files are not treated as documentation anymore
* commented out the line reading x509userproxy from ProxyManager in BatchSubmit Exec plugin
* new import path to find Clients.py  in WMSStatus Panda plugin
* bug fixed: usercert and userkey only needed in proxymanager.py when baseproxy is none, not always
* changes in the logrotate config file:
  no prerotate script, post rotate only restart daemon when there is a PID file
* normalized the format of the messages returned by the Sched plugins
* no manpages distribution.

2.4.2

* variable batchqueue not mandatory
* typo fixed in proxymanager.py

2.4.1

* reorganizing the docs/* files, etc/* files,  and the man/* files
* added requirements from voms-clients and myproxy in setup.cfg
* removed the handling of sysconfig files in rpm-post.sh
* mappings.conf created.
  plugins now read the mappings from that config file, instead of having hardcoded dictionaries.
* explanation for "lifetime" and "minlife" fixed in proxy.conf-example, 
  and variable "vomshours" renamed as "hours" in proxymanager.
  doc updated.
  method _checkTimeleft() renamed  _checkVOMSTimeLeft(). Log messages fixed accordingly.
*  created method _checkProxyTimeLeft()
*  added a check on proxy timeleft shorter than voms timeleft
* Bugs and typos fixed
* changed nomenclature: everything now is called "autopyfactory" instead of "apf" or "factory"
  .sysconfig removed from  /etc/sysconfig/autopyfactory.sysconfig
  panda- removed from package name
  no wrappers copied to the /etc/ directory
* accept multiple XML docs as output of "condor_q -g". 
* checking if the output of condor_q in querycondor() is still XML even when RC != 0
* if -name and -pool are empty, the condor_q_id is again "local"
* checking output of condor_q() is not None in WMS Status plugin Condor